[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["classUtils.py", "index_all.py"]

[project]
name = "classUtils"
version = "1.0"
dependencies = [
  "numpy",
  "pandas",
  "astropy"
]
requires-python = ">=3.9"
authors = [
  {name = "Wing-Fai Thi", email = "wingfai.thi@googlemail.com"},
]
description = "Scientic data container class"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Scientific data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9"
]

[project.urls]
Homepage = "https://www.astrowing.eu"
Repository = "https://github.com/wfthi/ScientificContainerClass.git"
